--- a/gb/23/2/26/n13938716.md
+++ b/gb/23/2/26/n13938716.md
@@ -14,13 +14,13 @@
 <p>“神韵带给你快乐”，“演出真是妙趣横生”，富国银行（WELLS FARGO）副总裁Tom Erickson说，“演员们全身心投入，与观众分享他们的喜悦”。</p>
 <p>2023年2月25日晚，Erickson在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%98%8E%E5%B0%BC%E9%98%BF%E6%B3%A2%E5%88%A9%E6%96%AF%E5%B8%82%E5%A5%A5%E8%8F%B2%E5%A7%86%E5%89%A7%E9%99%A2.md#1">明尼阿波利斯市奥菲姆剧院</a>观看了神韵今年在当地的第三场演出。</p>
 <p>Erickson是一位资深金融高管，现任富国银行（WELLS FARGO）副总裁，兼任阿戈西大学（Argosy University） 工商管理和健康服务硕士导师。</p>
-<p>“我真心觉得演出真是太棒了”，Erickson说。</p>
+<p>“我真心觉得演出真是太棒了！”Erickson说。</p>
 <p>“看看这些艺术家有多开心，就像（主持人）上来说话时，你能看出他太开心了”，他说，“可以感受到所有人都充满了喜悦。艺术家们面带微笑，能看出他们非常享受正在做的事情。”</p>
 <p>他表示，神韵艺术家一心为了观众，让他深受感动，“演出振奋人心，会让你有很多情感体验”。</p>
 <p>“我可以看出他们心无旁骛地投入在演出中，希望观众们能感受到那种幸福”，他说，“他们在努力与我们分享喜悦，与观众们心心相印”。</p>
 <p>神韵超凡的艺术带给Erickson很多惊喜，他购票时专门选择了靠近舞台的位置，“我坐得靠近舞台，为的是能看到交响乐团”，他说，“有一个画面，人物在天幕上飞，然后突然降落，然后真人就突然跳到舞台上来了。这样的创意真是独具匠心，他们是如何做到的？这真的太特别了。”</p>
 <p>“显而易见，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，真的是很棒”，他说。</p>
-<p>神韵为观众展现了共产党统治之前的中国神传文化，Erickson说，他看得非常开心，“有这么多不同的故事，我看得津津有味。其中一些古老的故事，仿佛把我们带回到5000年前。”</p>
+<p>神韵为观众展现了共产党统治之前的中国神传文化，Erickson说，他看得非常开心，“有这么多不同的故事，我看得津津有味。其中一些古老的故事，仿佛把我们带回到五千年前。”</p>
 <p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>上的美景，也让他有似曾相识的感觉，让他想起了曾经参观的中国名胜古迹。“我喜欢背景天幕中的风景”，“演出中有些背景就像颐和园那样，我很高兴看到（舞剧中）融入了一些我们似曾见过的名胜”。</p>
 <p>他还表示，演出所展现的神传文化体现了人类的普世价值，“虽然那是中国文化的一部分，但我觉得我们这里也是一样，很高兴看到世界各地都拥有这样的文化”。</p>
 <h2>银行高级副总裁：共产党之前的中国有艺术和自由</h2>
@@ -38,7 +38,7 @@
 <p>“我们来此有一个更大的目的”，他说，“那就是追求真理、真相，我们为真理而活。”</p>
 <p>Gallwas十几年前曾经看过一次神韵演出，这是第二次观看，他被演出感动了。</p>
 <p>“这是一次美好的心灵旅程。”他说，“这场演出结合了更多当代的故事，所以意义更加重大。他们描绘了独立思想和这种文化中的艺术能力所带给我们的一切，做的好！我被深深地感动，非常好。”</p>
-<p>让Gallwas特别感动的是神韵的“真诚”和传递出的“真理”、“真相”。</p>
+<p>让Gallwas特别感动的是神韵的“真诚”和传递出的“真理”“真相”。</p>
 <p>“这台制作的真诚和对中国不同地区文化的个人化描绘，而且是在同一台演出中，太精彩了。”他说，曾经演奏过乐器的他特别喜欢神韵的音乐，认为神韵的交响乐团能够“把所有东西结合在一起，并在视觉上表现出来，能够能够迅速抓住我的注意力”，是“不可思议的”。</p>
 <p>Gallwas认为，还有神韵女高音歌唱家宇鸣的演唱，唱出了“真相”，而那就是人生的意义。</p>
 <p>“我认为她唱的是真的。我们都需要对真理抱有信心。因为那就是天堂的意义，天堂就是真相和真理。”他说，“我们不是无缘无故地存在这里的……我们来到这里是有原因的。”</p>
@@ -48,47 +48,40 @@
 <p>“演出谈到了悲伤，也谈到了幸福，包括万象，但最终，人们的心灵会胜利，这就是我今晚所得到的信息。”他说，“我们最终能战胜苦难，我们必须在一起合作、生活、思考，并向前走，这非常鼓舞人心。”</p>
 <p>责任编辑：王愉悦</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938264.md#1">神韵传递传统价值 经理领会“诗意和勇气”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938296.md#1">神韵舞蹈非凡 公司老板：古代帝王才能看到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938298.md#1">神韵路德维希堡爆满落幕 观众盼明年再见</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938309.md#1">律师：神韵揭露中共迫害具有历史意义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938311.md#1">神韵充满慈悲 商学院教授：我很感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938313.md#1">聼神韵音乐深度入静 音乐教师想教神韵作品</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935048.md#1">【未解之谜】来自星星的孩子（3）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938231.md#1">【财商天下】全球制造业大转移 墨西哥成中企跳板</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938124.md#1">【拍案惊奇】盘点“白纸”年轻被捕者详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938245.md#1">【舞蹈三剑客】有史以来第一次！神韵首次抵达多明尼加演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937294.md#1">“一孩难求” 中国迎来首轮幼儿园关停潮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936809.md#1">北京批准中企援俄？布林肯：几乎确定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937215.md#1">爆发聚集性疫情 中国多地学校停课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937630.md#1">打破香港影史纪录 《毒舌大状》本土票房破亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937577.md#1">柏林影展走红毯 范冰冰：5年没拍戏挺残酷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921769.md#1">霹雳果的7大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142748.md#1">社交场合如何与陌生人互动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145892.md#1">【时事金扫描】中共抓“绿光”间谍 火箭坠民宅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145989.md#1">【十字路口】中共介选台湾 为何找上五月天？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145278.md#1">【环球直击】盘点中共对台介选 传逼五月天表态</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145149.md#1">25岁小伙投80万上海开面馆 6天濒临倒闭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145118.md#1">【时事军事】被连续击落的Su-34是什么来头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145378.md#1">河南一中学生突然死亡 传当地民众齐抗议讨说法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145750.md#1">才被爆遭施压表态亲中 五月天贴“异动通知”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145064.md#1">汪小菲现重大财务危机 被执行标的达748万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145856.md#1">胡海泉等明星名人财产遭强制执行 涉资金上亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144974.md#1">汤唯圣诞节晒夫妻甜蜜合照 破除婚变传闻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">巴黎欧莱雅彩妆 自然光泽 打造全天容光焕发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141673.md#1">膝关节疼痛发炎？中医3招让膝盖回春 多用20年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144179.md#1">香蕉减肥 早上吃还是晚上吃好？3个技巧很关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14132024.md#1">8成心血管病可预防 中医荐12类清血管最佳食物</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/26/n13938716.htm">不畏冰雪观神韵 明州金融精英喜获人生真相</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
