--- a/gb/23/12/30/n14147124.md
+++ b/gb/23/12/30/n14147124.md
@@ -34,7 +34,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147079.md#1">认同宪法？赖提尊重采用、侯喊刻心理、柯认同</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/30/n11622063.md#1" target="_blank">林辉：中共对赵州桥的破坏令人叹惋</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
